--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,14 @@
-/* styles go here */
+.part {
+  margin-top: 8px;
+  margin-bottom: 20px;
+  padding-left: 12px;
+}
+
+.content {
+  margin-top: 10px;
+  display: block;
+}
+
+label {
+  display: block;
+}
